--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=7;IE=8;IE=9" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>angular-esri</title>
-        <meta name="description" content="">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/>
         <link href='//serverapi.arcgisonline.com/jsapi/arcgis/3.5/js/esri/css/esri.css' rel='stylesheet' />
         <link href="css/bootstrap-combined.min.css" rel="stylesheet" />
         <link href="css/main.css" rel="stylesheet" />
     </head>
-    <body class="nihilo" ng-controller="AppCtrl">
+    <body ng-controller="AppCtrl">
         <div id="map"></div>
         <div class="search-container" search></div>
     </body>
